--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   app:
     build: ./web
-    restart: always
+    restart: unless-stopped
     ports:
       - "8004:3000" # localhost:container(needs to match port express is listening on in the app and from dockerfile)
     links:
@@ -13,7 +13,7 @@ services:
   db:
     # container name needs to match mongoose.connect('mongodb://db:27017/nodeSalesLeads')
     image: mongo
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./mongo/data:/data/db # need to delete 'mongo/data' directory to re-seed w/ new data
     ports:
