fixed start script

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,6 +2,7 @@ FROM node:latest
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app # specifying the working dir inside container
 COPY package.json /usr/src/app
+ENV NODE_ENV production
 RUN npm install
 # copy ALL current dir's content to container's workdir  
 COPY . . 
