--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DEBUG=app,app:* nodemon app.js"
+    "start": "if [$NODE_ENV == 'production']; then node app.js; else DEBUG=app,app:* nodemon app.js; fi"
   },
   "author": "",
   "license": "ISC",
